--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "min-pad",
   "version": "1.0.0",
   "description": "Markdown Into Notepad",
-  "main": "main.js",
+  "main": "./src/main.js",
   "scripts": {
     "start": "electron ."
   },
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^22.0.0"
+  },
+  "dependencies": {
+    "re-csset": "^1.2.1"
   }
 }
